# velvet-app

./: .claude-config.json  .gitignore  ADDITIONAL_FIXES_SUMMARY.txt  ARCHITECTURE.md  BACKUP-UNIFIED-CONSCIOUSNESS-v1.0.md  BETA-COMMUNITY-STRATEGY.md  BETA-DISTRIBUTION-GUIDE.md  BETA-RECRUITMENT-STRATEGY.md  CHANGELOG-UNIFIED-CONSCIOUSNESS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CRASH_RECOVERY.md  CRASH-FIX-README.md  DATABASE-ARCHITECTURE.md  DEMO_TEST_SCRIPT.md  ENHANCED-AUDIO-ML-ARCHITECTURE.md  FEATURES.md  FINAL_CSP_FIX_TEST.txt  FINAL_TEST_ALL_FIXES.txt  FIXED_TEST_SCRIPT.txt  LIVE_TEST_COMMAND.txt  OCR-QUALITY-ASSESSMENT-REPORT.md  PERFORMANCE-OPTIMIZATION-REPORT.md  PHASE2-DETAILED-SPEC.md  README.md  RESTORE-INSTRUCTIONS.md  Readme.md  SECURITY-IMPLEMENTATION-SUMMARY.md  TEST_COACHING.md  TEST_SCREEN_OCR.txt  VELVET-BRAIN-ARCHITECTURE.md  VELVET_COMPLETE_DOCUMENTATION.md  VIRAL-CONTENT-STRATEGY.md  VIRAL-SOCIAL-DECODER-GUIDE.md  WORKING-STATE-BACKUP.md  WORK_PROGRESS_TRACKER.md  beta-landing-page.html  clean-floating-demo.js  comprehensive-browser-test.js  create-icon.sh  (+26 more)
assets/: entitlements.mac.plist
debug-scripts/: COPY-PASTE-IN-DEVTOOLS.js  browser-test-executive-dysfunction.js  browser-test-social-decoder.js  browser-test-velvet-brain.js  check-social-decoder.js  debug-data-flow.js  demo-features-script.js  diagnose-screen-ocr.js  enable-screen-reading.js  enhanced-social-decoder.js  fix-monitoring-issues.js  fix-screen-ocr.js  floating-yc-demo.js  social-decoder.js  (+4 more)
services/capture-service/: Cargo.toml  build.rs
services/capture-service/src/: main.rs
(+155 files in other folders)
